--- a/zadanie2/templates/product/index.html.twig
+++ b/zadanie2/templates/product/index.html.twig
@@ -1,20 +1,30 @@
-{% extends 'base.html.twig' %}
+{# templates/product/index.html.twig #}
 
-{% block title %}Hello ProductController!{% endblock %}
-
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Product List</title>
+</head>
+<body>
+    <h1>List of Products</h1>
     <ul>
-        <li>Your controller at <code><a href="{{ '/home/tomasz/PO/zadanie2/src/Controller/ProductController.php'|file_link(0) }}">src/Controller/ProductController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/tomasz/PO/zadanie2/templates/product/index.html.twig'|file_link(0) }}">templates/product/index.html.twig</a></code></li>
+        {% for product in products %}
+            <li>
+                <a href="{{ path('product_get', {'id': product.id}) }}">{{ product.name }}</a> 
+                - ${{ product.price }}
+            </li>
+        {% endfor %}
     </ul>
-</div>
-{% endblock %}
+    <h1>Create New Product</h1>
+
+    <form action="{{ path('product_create') }}" method="POST">
+        <label for="name">Product Name:</label>
+        <input type="text" id="name" name="name" required>
+        
+        <label for="price">Product Price:</label>
+        <input type="number" id="price" name="price" required>
+        
+        <button type="submit">Create Product</button>
+    </form>
+</body>
+</html>
